--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,132 @@
 .App {
+  background-color: #282c34;
+  color: white;
+  background-image: url('../public/wed.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1 {
+  font-size: 8em;
+  font-family: 'Great Vibes', cursive;
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+  font-size: 4em;
+  font-family: 'Lato', sans-serif;
+}
+
+p {
+  font-size: 2em;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 100%;
+}
+
+.error {
+  font-size: 1.5em;
+  color: red;
+}
+
+.id-form {
+  width: 30%;
+}
+
+p,form {
+  transition: opacity 0.2s ease-in-out;
+}
+
+.submit {
+  background: #8EB5AE;
+  color: white;
+  border: unset;
+  width: 80%;
+  margin: 0 auto;
+  padding: 15px 20px;
+  border-radius: 5px;
+  font-size: 1em;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+.submit:hover {
+  background: #6c8a84;
+}
+
+input {
+  height: 40px;
+  width: 100%;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 25px 0 0 0;
+  padding: 0;
+}
+
+ul li {
+  float: left;
+  margin: 0 5px 0 0;
+  width: 100px;
+  height: 40px;
+  position: relative;
+}
+
+ul label,
+ul input {
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+ul input[type="radio"] {
+  opacity: 0.01;
+  z-index: 100;
+}
+
+ul input[type="radio"]:checked+label,
+.Checked+label {
+  background: #6c8a84;
+}
+
+ul label {
+  padding: 5px;
+  border: 1px solid #CCC;
+  border-radius: 5px;
+  cursor: pointer;
+  z-index: 90;
+}
+
+ul label:hover {
+  background: #DDD;
+}
+
+.App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .App-logo {
@@ -34,5 +161,51 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+.rsvp_table {
+  margin: 40px;
+  padding: 10px 20px 20px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.rsvp_table div div {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  gap: 40px;
+  margin: 20px 0;
+}
+
+.delete {
+  background-color: unset;
+  border: unset;
+  color: red;
+  text-decoration: underline;
+  cursor: pointer;
+  box-sizing: none;
+}
+
+h2 {
+  text-align: center;
+}
+
+.add_form {
+  width: 50%;
+  margin: 20px auto;
+}
+
+@media screen and (max-width: 500px) {
+  h1 {
+    font-size: 4em;
+  }
+  h2 {
+    font-size: 2em;
+  }
+
+  .id-form {
+    width: 75%;
   }
 }
